--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.3.1
 django-htmx==1.17.2
-django-bootstrap5==23.2
+django-bootstrap5>=23.1,<24.0
 django-crispy-forms==2.1
 crispy-bootstrap5==0.7
 django-widget-tweaks==1.5.0
@@ -36,18 +36,18 @@ django-extensions==3.2.3
 
 # Authentication and security
 social-auth-app-django==5.4.0
-python-social-auth==0.3.6
+python-social-auth>=0.3.6,<1.0.0
 social-auth-app-django==5.4.0
 
 # Maps and location
 django-leaflet==0.29.0
 
 # Calendar and scheduling
-django-scheduler==0.9.0
+django-scheduler>=0.9.0,<1.0.0
 
 # Analytics and reporting
 django-chartjs==2.2.1
-plotly-dash==2.14.2
+plotly-dash>=2.14.0,<3.0.0
 
 # Background tasks
 celery==5.3.4
@@ -83,7 +83,7 @@ factory-boy==3.3.0
 # Deployment
 whitenoise==6.6.0
 gunicorn==21.2.0
-django-heroku==0.3.1
+django-heroku>=0.3.1,<1.0.0
 
 # JavaScript/CSS compilation
 nodeenv==1.8.0
